--- a/MODAMSWeb/Areas/Users/Views/Transfers/PreviewTransfer.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Transfers/PreviewTransfer.cshtml
@@ -157,7 +157,7 @@
                 <h6 class="mb-0">@Localizer["Assets"]</h6>
                 <div class="d-flex align-items-center gap-2">
                     <span class="badge rounded-pill text-bg-light">@Model.vwTransfer.NumberOfAssets</span>
-                    <button class="btn btn-sm btn-outline-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#pvAssets" aria-expanded="false" aria-controls="pvAssets">
+                    <button class="btn btn-sm btn-outline-info" type="button" data-bs-toggle="collapse" data-bs-target="#pvAssets" aria-expanded="false" aria-controls="pvAssets">
                         @Localizer["ShowDetails"]
                     </button>
                 </div>
