--- a/MODAMSWeb/Areas/Users/Views/Transfers/ReceivedAssets.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Transfers/ReceivedAssets.cshtml
@@ -82,11 +82,7 @@
     </div>
 </div>
 
-@section Scripts{
-    <script>
-        $(document).ready(() => {
-            hideMenu();
-            makeDataTable('#tblTransfers', "2");
-        });
-    </script>
+@section Scripts {
+    <partial name="_DatatablesAssets" />
+    <script src="~/js/pages/transfers-receivedassets.js"></script>
 }
