--- a/MODAMSWeb/Views/Shared/_Layout.cshtml
+++ b/MODAMSWeb/Views/Shared/_Layout.cshtml
@@ -97,7 +97,7 @@
                 </div>
             </div>
         </div>
-        <partial name="layouts/-selector-model.cshtml" />
+        @* <partial name="layouts/-selector-model.cshtml" /> *@
         <partial name="layouts/_footer.cshtml" />
     </div>
 
